--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,12 +57,7 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-        with:
-          registry: <your-account-id>.dkr.ecr.<region>.amazonaws.com
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ap-northeast-2
+
 
       # Docker 이미지를 빌드하고 ECR에 푸시합니다.
       # ECR_REGISTRY: Amazon ECR 레지스트리 URL.
@@ -71,7 +66,7 @@ jobs:
       # 이 이미지가 빌드되고, 지정된 ECR 리포지토리에 푸시됩니다.
       - name: Build, tag, and push image to Amazon ECR
         env:
-          ECR_REGISTRY: 463470968088.dkr.ecr.ap-northeast-2.amazonaws.com/petclinic # 수정 []포함 내용 삭제후 생성된  registry 입력
+          ECR_REGISTRY: 463470968088.dkr.ecr.ap-northeast-2.amazonaws.com # 수정 []포함 내용 삭제후 생성된  registry 입력
           ECR_REPOSITORY: petclinic
           IMAGE_TAG: ${{ github.sha }}
         run: |
